[gd_scene load_steps=4 format=3 uid="uid://dxqiu62xwj033"]

[ext_resource type="Script" path="res://settings.gd" id="1_tt0y0"]

[sub_resource type="InputEventKey" id="InputEventKey_kdu3a"]
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_xsngb"]
events = [SubResource("InputEventKey_kdu3a")]

[node name="PanelContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tt0y0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
modulate = Color(1.5, 1.5, 1.5, 1)
layout_mode = 2
text = "ROBCO INDUSTRIES UNIFIED OPERATING SYSTEM
COPYRIGHT 2075-2077 ROBCO INDUSTRIES
-Server 13-
"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
modulate = Color(1.5, 1.5, 1.5, 1)
layout_mode = 2
text = "SETTINGS
============================="

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
modulate = Color(1.5, 1.5, 1.5, 1)
layout_mode = 2
text = "VOLUME"

[node name="VolDown" type="Button" parent="VBoxContainer/HBoxContainer"]
modulate = Color(1.5, 1.5, 1.5, 1)
layout_mode = 2
text = "<"
alignment = 0

[node name="Volume" type="Label" parent="VBoxContainer/HBoxContainer"]
modulate = Color(1.5, 1.5, 1.5, 1)
layout_mode = 2

[node name="VolUp" type="Button" parent="VBoxContainer/HBoxContainer"]
modulate = Color(1.5, 1.5, 1.5, 1)
layout_mode = 2
text = ">"
alignment = 0

[node name="BackButton" type="Button" parent="VBoxContainer"]
modulate = Color(1.5, 1.5, 1.5, 1)
layout_mode = 2
shortcut = SubResource("Shortcut_xsngb")
text = "> Back"
alignment = 0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VolDown" to="." method="_on_vol_down_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VolUp" to="." method="_on_vol_up_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
